--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
                     <i class="fa-solid fa-magnifying-glass-chart"></i>
                     <h2>Python Data Analysis</h2>
                     <p>I am good at working with Python pandas frameworks. </p>
-                    <a href="#">Learn more</a>
+                    <!--a href="#">Learn more</a-->
                 </div>
                 <div>
                     <i class="fas fa-code"></i>
                     <h2>Web Design</h2>
                     <p>I am good at developing web application interfaces and capable of cloning designs to detail. </p>
-                    <a href="#">Learn more</a>
+                    <!--a href="#">Learn more</a-->
                 </div>
                 <div>
                     <i class="fab fa-app-store"></i>
                     <h2>Mobile App Development</h2>
                     <p>I am very much interested in developing eye catching interfaces for android applications and integrating backend with Firebase. </p>
-                    <a href="#">Learn more</a>
+                    <!--a href="#">Learn more</a-->
                 </div>
             </div>
         </div>
@@ -117,12 +117,12 @@
                 </div>
                 <div class="work">
                     <div class="image_container">
-                    <img src="img/work_5.png">
+                    <img src="img/work_2_1.png">
                 </div>
                     <div class="layer">
                         <h3>Acme Rockets</h3>
                         <p>This is a website, I practiced building, to learn the basics of Tailorwindcss</p>
-                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                        <a href="https://github.com/Lakshikuga/Portfolio-projects/tree/main/website"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -132,7 +132,7 @@
                     <div class="layer">
                         <h3>InstantLocate</h3>
                         <p>This is a location based Android application, to suggest services to users based on their location</p>
-                        <a href="#"><i class="fas fa-external-link-alt"></i></a>
+                        <a href="https://github.com/Lakshikuga/Portfolio-projects/tree/main/instant_locate"><i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -146,7 +146,7 @@
                     </div>
                 </div>
             </div>
-            <a href="#" class="btn">See more</a> 
+            <a href="https://github.com/Lakshikuga/Portfolio-projects" class="btn">See more</a> 
         </div>
     </div>
 
