Added CV and changed about bg image

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="img/portfolio_bg_2.jpeg">
+                    <img src="img/about_bg.jpeg">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -163,7 +163,7 @@
                         <a href="https://github.com/Lakshikuga"><i class="fa-brands fa-github"></i></a>
                         <a href="https://medium.com/@lakkuga"><i class="fa-brands fa-medium"></i></a>
                     </div>
-                    <a href="img/CV.pdf" download class="btn btn2">Download CV</a>
+                    <a href="img/CV_AutoDesk.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                     <form name ="submit-to-google-sheet">
